<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="new_message">New message</string>
    <string name="create_new_message">Compose new message</string>
    <string name="menu_call_back">Call <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_send_email">Send email to <xliff:g id="name">%s</xliff:g></string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_add_address_to_contacts">Add <xliff:g id="name">%s</xliff:g> to Contacts</string>
    <string name="menu_call">Call</string>
    <string name="menu_delete_all">Delete threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="menu_undelivered_messages">Undelivered messages</string>
    <string name="menu_view">View thread</string>
    <string name="refreshing">Refreshing\u2026</string>
    <string name="has_draft">Draft</string>
    <string name="broadcast_from_to"><xliff:g id="sender" example="me">%1$s</xliff:g> to <xliff:g id="recipient" example="Megan">%2$s</xliff:g></string>
    <string name="anonymous_recipient">Anonymous</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_picture">View picture</string>
    <string name="view_slideshow">View slideshow</string>
    <string name="view_message_details">View message details</string>
    <string name="view_delivery_report">View report</string>
    <string name="delete_message">Delete message</string>
    <string name="sent_on">"Sent: <xliff:g id="date">%s</xliff:g>"</string>
    <string name="expire_on">"Expires: <xliff:g id="date">%s</xliff:g>"</string>
    <string name="kilobyte">KB</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="undelivered_msg_dialog_body">Unable to send this message.\nAttempt made: <xliff:g id="message">%s</xliff:g>.</string>
    <string name="undelivered_sms_dialog_body">Unable to send this message.</string>
    <string name="delete_thread">Delete thread</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="name_colon"><b><xliff:g id="name" example="Me">%s</xliff:g></b>": "</string>
    <string name="inline_subject">"&lt;Subject: <xliff:g id="subject">%s</xliff:g>&gt;"</string>
    <string name="drm_protected_text">"* DRM protected text *"</string>
    <string name="insufficient_drm_rights">Insufficient DRM rights detected.</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="message_options">Message options</string>
    <string name="done">Done</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_slide">Remove slide</string>
    <string name="add_slide">Add slide</string>
    <string name="add_slide_hint">Select to create new slide.</string>
    <string name="discard_slideshow">Discard slideshow</string>
    <string name="slide_show_part">Part <xliff:g id="part">%1$s</xliff:g>/<xliff:g id="total">%2$s</xliff:g></string>
    <string name="remove_text">Remove text</string>
    <string name="add_picture">Add picture</string>
    <string name="remove_picture">Remove picture</string>
    <string name="add_music">Add music</string>
    <string name="remove_music">Remove music</string>
    <string name="add_video">Add video</string>
    <string name="remove_video">Remove video</string>
    <string name="compose_title">Compose</string>
    <string name="to_hint">To</string>
    <string name="subject_hint">Subject</string>
    <string name="add_attachment">Attach</string>
    <string name="add_subject">Add subject</string>
    <string name="discard">Discard</string>
    <string name="view">View</string>
    <string name="replace">Replace</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="all_threads">All threads</string>
    <string name="type_to_compose_text_enter_to_send">Type to compose</string>
    <string name="open_keyboard_to_compose_message">Open keyboard to compose message</string>
    <string name="image_too_large">Picture too large</string>
    <string name="ask_for_automatically_resize">Automatically resize picture before sending?</string>
    <string name="compressing">Picture too large. Compressing\u2026</string>
    <string name="unsupported_media_format">Unsupported <xliff:g id="name">%1$s</xliff:g> format</string>
    <string name="select_different_media">Please select a different <xliff:g id="name">%1$s</xliff:g>.</string>
    <string name="exceed_message_size_limitation">Message size limit reached.</string>
    <string name="message_too_big_for_video">The message is too big to attach a video.</string>
    <string name="failed_to_add_media">Sorry, you cannot add this <xliff:g id="name">%1$s</xliff:g> to your message.</string>
    <string name="failed_to_resize_image">Picture not resized.</string>
    <string name="resize_image_error_information">Sorry, even when resized this picture is too large to send.</string>
    <string name="forward_prefix">Fwd:\u0020</string>
    <string name="discard_message">Discard</string>
    <string name="discard_message_reason">Your message will be discarded because it has no valid recipients.</string>
    <string name="has_invalid_recipient">Invalid recipient(s): &lt;<xliff:g id="name">%1$s</xliff:g>&gt;</string>
    <string name="invalid_destination">You have entered an invalid address.</string>
    <string name="invalid_recipient_message">Please correct the recipient(s) or they will not receive the message.</string>
    <string name="cannot_send_message">Cannot send this message</string>
    <string name="cannot_send_message_reason">Your message has no valid recipients.</string>
    <string name="cannot_forward_drm_obj">The DRM object included in the message cannot be forwarded.</string>
    <string name="converting_to_picture_message">Converting to multimedia message\u2026</string>
    <string name="converting_to_text_message">Converting to text message\u2026</string>
    <string name="cannot_add_slide_anymore">Cannot add more slides.</string>
    <string name="cannot_add_picture_and_video">Cannot add video and picture to one slide.</string>
    <string name="cannot_save_message">Cannot save message.</string>
    <string name="cannot_load_message">Cannot load message.</string>
    <string name="message_saved_as_draft">Message saved as draft.</string>
    <string name="locked_message_cannot_be_deleted">Locked message cannot be deleted.</string>
    <string name="too_many_recipients">This message has too many recipients (<xliff:g id="currentCount">%1$s</xliff:g>). There is a limit of <xliff:g id="maxLimit">%2$s</xliff:g> recipients.</string>
    <string name="no">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="about_string">Parandroid Messaging 0.9 BETA</string>
    <string name="parandroid_about">
        Send and receive encrypted SMS (text) messages between Android phones, to improve privacy.
        
        \n\nSee http://www.parandroid.org for more info.\nReleased under the Apache 2.0 open source license.
    </string>
    <string name="parandroid_developers">
        Erik Wallentinsen
        \nJeffrey Klardie
    </string>
    <string name="parandroid_send_public_key">
        Please specify recipients to send your public key to.
    </string>
    <string name="menu_send_public_key">Send public key</string>
    <string name="no_recipient">No recipient given</string>
    <string name="notify_tap_to_remove">Tap a recipient to remove</string>
    <string name="add_recipient">Add recipient</string>
    <string name="parandroid_set_password">Please enter your new password to encrypt your private key.</string>
    <string name="help_intro_title">Parandroid Messaging\nWhat is this?</string>
    <string name="help_intro_text">
        This is the Parandroid Messaging help page. It provides some info about how Parandroid Messaging works.
        \n\nYou got here either because its the first time you lauch Parandroid Messaging or you clicked the \'Help\' menu item.
        \n\nClick next, or drag the screen to the left, to continue to the next section.
    </string>
    <string name="help_keypair_title">Public-key cryptography</string>
    <string name="help_keypair_text">
        Parandroid Messaging uses public-key cryptography to encrypt messages.
        \n\nIt involves a public and private key, which are mathematically related to each other, but cannot be derived from each other.
        \n\nMessages encrypted with a public key, can only be decrypted with the corresponding private key, and vice versa.
    </string>
    <string name="help_password_title">The private key</string>
    <string name="help_password_text">
        The private key is kept secret at all times.
        \n\nIn Parandroid Messaging, the private key is stored encrypted on the phone\'s internal memory.
        \n\nThe private key can be unlocked by providing the correct password. If you provide a wrong password, encrypted messages will be unreadable.
        \n\nIn \'Menu > Settings\' you can specify what to do when the phone enters sleep mode (like forget the password, or close a conversation with encrypted messages in it).
    </string>
    <string name="help_exchange_title">Exchanging public keys</string>
    <string name="help_exchange_text">
        Before two Parandroid Messaging users are able to send encrypted messages to each other, they need to exchange their public keys. You can send your public key to a contact
        from \'Menu > Send public key\'.
        \n\nWhen you receive a public key, you will be notified. You have to accept a certain public key in order to actually use it.
        Make sure you trust the public key you receive when you choose to accept it.
        \n\nParandroid Messaging encrypts messages both with the sender\'s private key, and the receivers public key.
        \n\nThe result:
        \n- Only the intended receiver can decrypt the message.
        \n- Nobody else can read or alter the message.
        \n- Receiver is 100% sure who sent the message.
    </string>
    <string name="help_send_title">Sending encrypted messages</string>
    <string name="help_send_text">
        When you and your contact accepted each other\'s public keys, you can send encrypted messages.
        \n\nIf encryption to a receiver is possible, you\'ll see the Parandroid Messaging icon when composing a message. You can tap on the icon to enable or disable encryption on the message you are composing.
    </string>
    <string name="help_generate_title">Let\'s get started!</string>
    <string name="help_generate_text">
        It seems that you don\'t have a keypair key yet, so let\'s generate one now.
        \n\nFirst, you will have to enter the password you want to use. After that, a keypair will be generated.
        \n\nClick next to generate your keypair!
    </string>
    <string name="help_more_title">Done! Now what?</string>
    <string name="help_more_1_text">
        First, send your public key to some contacts (you can always do this later from \'Menu > Send public key\').
        \n\nIMPORTANT: To prevent double notifications, disable notifications in the normal Messaging application. To do this, open \'Messaging\' from the application list, then open \'Menu -> Settings\' and make sure the \'Notifications\' option is diabled.
    </string>
    <string name="help_more_2_text">
        \n\nAlso, visit http://www.parandroid.org!
        \n\nReport bugs, request features, and help us improve your privacy!
    </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>