<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ViewFlipper android:id="@+id/help_flipper"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Intro help page -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">    
                
                <ImageView
                    android:src="@drawable/ic_launcher_smsmms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10px"/>
        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/help_intro_title"
                    android:padding="10px"
                    android:paddingLeft="0px"
                    android:textSize="18px" 
                    android:gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_intro_text"
                android:padding="10px"/>
        </LinearLayout>

        <!-- Keypair help page -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">    
                
                <ImageView
                    android:src="@drawable/ic_generate_keypair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10px"/>
        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/help_keypair_title"
                    android:padding="10px"
                    android:paddingLeft="0px"
                    android:textSize="18px" 
                    android:gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_keypair_text"
                android:padding="10px"/>
        </LinearLayout>

        <!-- Password help page -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">    
                
                <ImageView
                    android:src="@drawable/ic_generate_keypair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10px"/>
        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/help_password_title"
                    android:padding="10px"
                    android:paddingLeft="0px"
                    android:textSize="18px" 
                    android:gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_password_text"
                android:padding="10px"/>
        </LinearLayout>
        
        <!-- Exchange keys help page -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">    
                
                <ImageView
                    android:src="@drawable/ic_send_public_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10px"/>
        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/help_exchange_title"
                    android:padding="10px"
                    android:paddingLeft="0px"
                    android:textSize="18px" 
                    android:gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_exchange_text"
                android:padding="10px"/>
        </LinearLayout>
        
        <!-- Send encrypted messages help page -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">    
                
                <ImageView
                    android:src="@drawable/stat_notify_encrypted_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10px"/>
        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/help_send_title"
                    android:padding="10px"
                    android:paddingLeft="0px"
                    android:textSize="18px" 
                    android:gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_send_text"
                android:padding="10px"/>
                
            <ImageView
                    android:src="@drawable/parandroid_encrypt_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10px"/>
                    
        </LinearLayout>
        
        <!-- Lets get started (generate a keypair) help page -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/generate_new_keypair">
        
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content">    
                
                <ImageView
                    android:src="@drawable/ic_generate_keypair"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10px"/>
        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/help_generate_title"
                    android:padding="10px"
                    android:paddingLeft="0px"
                    android:textSize="18px" 
                    android:gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_generate_text"
                android:padding="10px"/>
                        
        </LinearLayout>
        
        <!-- More help page -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">    
                
                <ImageView
                    android:src="@drawable/stat_notify_encrypted_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10px"/>
        
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/help_more_title"
                    android:padding="10px"
                    android:paddingLeft="0px"
                    android:textSize="18px" 
                    android:gravity="center_vertical|center_horizontal"/>
            </LinearLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_more_1_text"
                android:autoLink="all"
                android:linksClickable="true"  
                android:padding="10px"/>
            
            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                 
                <Button android:text="@string/menu_send_public_key"
                    android:id="@+id/button_send_public_key"
                    android:layout_width="wrap_content"  
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">
                </Button>
            </RelativeLayout>
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_more_2_text"
                android:autoLink="all"
                android:linksClickable="true"  
                android:padding="10px"/>
        </LinearLayout>

    </ViewFlipper>    
     
    <ProgressBar android:id="@+id/progress_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5px"
        style="?android:attr/progressBarStyleHorizontal">
    </ProgressBar>
     
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
               
        <Button android:text="@string/previous"
                android:id="@+id/button_previous"
                android:layout_width="fill_parent"  
                android:layout_height="wrap_content"
                android:layout_weight="1">
        </Button>       
        
        <Button android:text="@string/next"
                android:id="@+id/button_next"
                android:layout_width="fill_parent"  
                android:layout_height="wrap_content"
                android:layout_weight="1">
        </Button>
    </LinearLayout>

</LinearLayout>