<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">    
        
        <ImageView
          android:src="@drawable/stat_notify_encrypted_msg"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
            android:padding="10px"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/parandroid_set_password"
            android:padding="10px"
        />
    </LinearLayout>

    <EditText  
        android:id="@+id/password"  
        android:password="true"  
        android:singleLine="true"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
    />
    <EditText  
        android:id="@+id/password_confirm"  
        android:password="true"  
        android:singleLine="true"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
    />  
      
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button android:text="@string/confirm"
                android:id="@+id/submitbutton"
                android:layout_width="fill_parent"  
                android:layout_height="wrap_content"
                android:layout_weight="1">
        </Button>       
        
        <Button android:text="@string/no"
                android:id="@+id/cancelbutton"
                android:layout_width="fill_parent"  
                android:layout_height="wrap_content"
                android:layout_weight="1">
        </Button>
    </LinearLayout>
</LinearLayout>
